syntax = "proto3";

package proto;

import "gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message PushsMsg {
    int32 server = 1;
    repeated string subKeys = 2;
    bytes msg = 3;
}

message PingArg {
}

message PingReply {
}

message ConnArg {
    string token = 1;
	int32 server = 2;
}

message ConnReply {
    string key = 1;
    int32 roomId = 2;
}

message DisconnArg {
    string key = 1;
    int32 roomId = 2;
}

message DisconnReply {
    bool has = 1;
}
